Những điều nhỏ bé

--- a/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormBanHang.resx
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormBanHang.resx
@@ -249,6 +249,15 @@
         Qy/JiIZekrn9CesyO4An1yRz+9K8nr4eXsKz67qub0nG7C8b4wfAPHO37MV8MAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="txt_TienKhachTra.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAN8AAAAjCAYAAAAUqd9OAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACgSURBVHhe7dOxDcMwAANB7T+VDI2RMTJADAFqMoD9zR3A
+        hv0PILTW+sw5f2b2/HZvJ70x9gG8Y/d20hMfvEl8EBEfRMQHEfFBRHwQER9ExAcR8UFEfBARH0TEBxHx
+        QUR8EBEfRMQHEfFBRHwQER9ExAcR8UFEfBARH0TEBxHxQUR8EBEfRMQHEfFBRHwQ+Yvvuq7vPszs+e3e
+        TnrA+8a4AWP+FD3YdXdyAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btn_ThanhToan.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAVQAAAA/CAYAAAC/1jCYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
