--- a/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormHangDoi.resx
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormHangDoi.resx
@@ -148,7 +148,7 @@
         /zh8v70EOjyXZbkndTPr3xg/7j4jKTAj458AAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="dataGridViewTextBoxColumn1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="MaHD.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="dataGridViewTextBoxColumn3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
