--- a/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormThemSPKM.resx
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormThemSPKM.resx
@@ -313,4 +313,7 @@
   <data name="bunifuLabel8.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 1.2px; margin: auto; padding-top: 0px;font-family: 'Tahoma'; font-size: 9pt; width: 100%; height: 100%; font-style: normal; font-weight: bold; text-decoration: none; color: #143920; text-align: left; }</value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>141, 17</value>
+  </metadata>
 </root>
